crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_basic

type Handle = MkHandle#0(String)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(z7) -> Unit
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare println: (z7) -> Unit

fn main() -> Unit =
  let v0: ~Handle = construct Handle::MkHandle#0("test")
  let v1: Unit = call println("opened")
  let v2: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
  auto_close[Handle](v0, dict=v2, null=true)
  v1

fn Disposable$$Handle$$dispose(v3: ~Handle) -> Unit =
  let v4: Unit = call println("closed")
  v4
