crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_derive_generic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_derive_generic

struct Resource { id: Int }
struct Box[x10] { value: ~x10 }
instance core/disposable.Disposable[Resource] { dispose=Disposable$$Resource$$dispose }
instance core/disposable.Disposable[Box] { dispose=Disposable$$Box$$dispose }
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
import core/io/println as println(g) -> Unit

fn Disposable$$Resource$$dispose(v0: ~Resource) -> Unit =
  let v1: Int = project v0.0
  ()

fn Disposable$$Box$$dispose(v2: Dict[core/disposable.Disposable, x10], v3: ~Box[x10]) -> Unit =
  let v4: ~x10 = project v3.0
  let v5: Unit = trait_call core/disposable.Disposable.dispose(v2, v4)
  ()
