crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_derive_generic_runtime.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_derive_generic_runtime

struct Resource { id: Int }
struct Box[y10] { value: ~y10 }
instance core/disposable.Disposable[Resource] { dispose=Disposable$$Resource$$dispose }
instance core/disposable.Disposable[Box] { dispose=Disposable$$Box$$dispose }
extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
declare println: (x10) -> Unit

fn main() -> Unit =
  let v0: ~Resource = construct Resource(7)
  let v1: ~Box[Resource] = construct Box(v0)
  let v2: Unit = call println("made")
  let v3: Dict[core/disposable.Disposable, Resource] = get_dict core/disposable.Disposable[Resource]
  let v4: Dict[core/disposable.Disposable, Box[Resource]] = make_dict core/disposable.Disposable[Box[Resource]](v3)
  auto_close[Box](v1, dict=v4, null=true)
  v2

fn Disposable$$Resource$$dispose(v5: ~Resource) -> Unit =
  let v6: Int = project v5.0
  let v7: Unit = call println("closed")
  v7

fn Disposable$$Box$$dispose(v8: Dict[core/disposable.Disposable, y10], v9: ~Box[y10]) -> Unit =
  let v10: ~y10 = project v9.0
  let v11: Unit = trait_call core/disposable.Disposable.dispose(v8, v10)
  ()
