crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_derive_record_basic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_derive_record_basic

struct Socket { fd: Int }
struct Logger { id: Int }
struct Conn { socket: ~Socket, logger: ~Logger }
instance core/disposable.Disposable[Socket] { dispose=Disposable$$Socket$$dispose }
instance core/disposable.Disposable[Logger] { dispose=Disposable$$Logger$$dispose }
instance core/disposable.Disposable[Conn] { dispose=Disposable$$Conn$$dispose }
extern java "krypton.runtime.KryptonIO" println(q8) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (q8) -> Unit

fn main() -> Unit =
  let v0: ~Socket = construct Socket(1)
  let v1: Unit = call println("open_a")
  let v2: ~Logger = construct Logger(2)
  let v3: Unit = call println("open_b")
  let v4: ~Conn = construct Conn(v0, v2)
  let v5: Dict[core/disposable.Disposable, Conn] = get_dict core/disposable.Disposable[Conn]
  auto_close[Conn](v4, dict=v5, null=true)
  ()

fn Disposable$$Socket$$dispose(v6: ~Socket) -> Unit =
  let v7: Int = project v6.0
  let v8: Unit = call println("close_a")
  v8

fn Disposable$$Logger$$dispose(v9: ~Logger) -> Unit =
  let v10: Int = project v9.0
  let v11: Unit = call println("close_b")
  v11

fn Disposable$$Conn$$dispose(v12: ~Conn) -> Unit =
  let v13: ~Socket = project v12.0
  let v14: ~Logger = project v12.1
  let v16: Dict[core/disposable.Disposable, Logger] = get_dict core/disposable.Disposable[Logger]
  let v15: Unit = trait_call core/disposable.Disposable.dispose(v16, v14)
  let v18: Dict[core/disposable.Disposable, Socket] = get_dict core/disposable.Disposable[Socket]
  let v17: Unit = trait_call core/disposable.Disposable.dispose(v18, v13)
  ()
