crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_extern_hand_written.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_extern_hand_written

instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "native.Handle" close_handle(~Handle) -> Unit
extern type java "native.Handle" Handle
import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
declare close_handle: (~Handle) -> Unit

fn Disposable$$Handle$$dispose(v0: ~Handle) -> Unit =
  let v1: Unit = call close_handle(v0)
  v1
