crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_extern_noop_runtime.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_extern_noop_runtime

instance core/disposable.Disposable[SB] { dispose=Disposable$$SB$$dispose }
extern java "krypton.runtime.KryptonIO" println(q8) -> Unit
extern java "java.lang.StringBuilder" new_sb() -> ~SB
extern type java "java.lang.StringBuilder" SB
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare new_sb: () -> ~SB
declare println: (q8) -> Unit

fn main() -> Unit =
  let v0: Unit = call println("before")
  let v1: ~SB = call new_sb()
  let v2: Unit = call println("after")
  let v3: Dict[core/disposable.Disposable, SB] = get_dict core/disposable.Disposable[SB]
  auto_close[SB](v1, dict=v3, null=true)
  v2

fn Disposable$$SB$$dispose(v4: ~SB) -> Unit =
  ()
