crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_finally_panic.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_finally_panic

type Handle = MkHandle#0(String)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/traversable/sequence as sequence(o[p[r]]) -> p[o[r]]
declare panic
declare println: (x10) -> Unit

fn main() -> Unit =
  let v0: ~Handle = construct Handle::MkHandle#0("test")
  let v1: Unit = call println("opened")
  let v2: Never = call panic("boom")
  let v3: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
  auto_close[Handle](v0, dict=v3, null=true)
  v2

fn Disposable$$Handle$$dispose(v4: ~Handle) -> Unit =
  switch v4 {
    0 (v5: String) ->
      let v6: Unit = call println("closed")
      v6
  }
