crates/ir/tests/ir/snapshots/main__ir__lower__disposable__disposable_indirect_consume.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module disposable__disposable_indirect_consume

type Handle = MkHandle#0(String)
instance core/disposable.Disposable[Handle] { dispose=Disposable$$Handle$$dispose }
extern java "krypton.runtime.KryptonIO" println(x10) -> Unit
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (x10) -> Unit

fn use_handle(v0: ~Handle) -> Unit =
  let v1: Dict[core/disposable.Disposable, Handle] = get_dict core/disposable.Disposable[Handle]
  let v2: Unit = trait_call core/disposable.Disposable.dispose(v1, v0)
  v2

fn main() -> Unit =
  let v3: ~Handle = construct Handle::MkHandle#0("test")
  let v4: Unit = call println("opened")
  let v5: Unit = call use_handle(v3)
  v5

fn Disposable$$Handle$$dispose(v6: ~Handle) -> Unit =
  switch v6 {
    0 (v7: String) ->
      let v8: Unit = call println("closed")
      v8
  }
